--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <link rel="stylesheet" href="css/doc.css">
 </head>
 <body>
-<h1 id="bad-jokes-to-spend-a-cloudy-afternoon-indoors">Bad Jokes to Spend a Cloudy Afternoon Indoors</h1>
+<h1 id="bad-jokes-for-a-cloudy-afternoon-spent-indoors">Bad Jokes for a Cloudy Afternoon Spent Indoors</h1>
 <figure>
-<img src="img/cartoon-welcome-open-window-fresh-air.gif" alt="What’s that ruckus out here?" /><figcaption>What’s that ruckus out here?</figcaption>
+<img src="img/cartoon-welcome-open-window-fresh-air.gif" alt="What’s that ruckus out there?" /><figcaption>What’s that ruckus out there?</figcaption>
 </figure>
 A horse walks into a bar. Bartender says, “Why the long face?”
 <div class="comment">
@@ -63,7 +63,7 @@ Ohh, I see what you did here. This is one of those cases where it’s funny ’c
 <figure>
 <img src="img/cartoon-beard.png" alt="I mean, seriously.. ripping off graphics and music from a widely popular Nintendo game?!" /><figcaption>I mean, seriously.. ripping off graphics and music from a widely popular Nintendo game?!</figcaption>
 </figure>
-<p>I know this might be just a pointless exercise at this point, but here’s one last attempt to get this important information across: if you have some time to spare (I think you do, given that you’re reading this), please <a href="http://www.sloperama.com/advice/faq61.htm">read this important information</a>. It will do you good.</p>
+<p>I know that, by this time, this might be just a pointless exercise, but here’s one last attempt to get this across: if you have some time to spare (I think you do, given that you’re reading this), please <a href="http://www.sloperama.com/advice/faq61.htm">read this important information</a>. It will do you good.</p>
 <p>And so, we reach the end of this story, my friends. Soon, this URL will contain nothing but emptiness, and all of this will be nothing but a dim memory in the collective consciousness.</p>
 <p>I’ll confide a little secret to you: my main consolation at times like this, is in the words popularized by of our good friend Gautama..</p>
 <figure>
