--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Puns based on word kung–fu might just be my favourite kind of pun. This is pro
 <p>What a fool.</p>
 <div class="comment">
 <p>Wait, that’s it? Where’s the punchline?</p>
-Ohh, I see what you did here. This is one of those cases where it’s funny ’cause it’s true.
+Ohh, I see what you did here. This must be one of those cases where it’s funny ’cause it’s true. Well, it’s not funny.
 </div>
 
 <div class="hrule1"></div>
@@ -57,13 +57,15 @@ Ohh, I see what you did here. This is one of those cases where it’s funny ’c
 <figure>
 <img src="img/cartoon-big-head-bulgy-eyed-intense-looking-at-you.gif" alt="Oh, I love humanity, it’s people that I cannot stand" /><figcaption>Oh, I love humanity, it’s people that I cannot stand</figcaption>
 </figure>
-<p>I mean, when I think of people who spend their time doing something I love, like programming, I can’t help but to form a picture in my mind of how someone like that might be, and I ascribe certain traits to that picture. I imagine, for example, that such a person (some who <em>codes</em>) would make some effort to read software documentation, and at least spend a few moments to understand the implications of what is explained there.</p>
+<p>I mean, when I think of people who spend their time doing something I love, like programming, I can’t help but to form a picture in my mind of how someone like that might be, and I ascribe certain traits to that picture. I imagine, for example, that such a person (someone who <em>codes</em>) would make some effort to read software documentation, and at least spend a few moments to understand the implications of what is explained there.</p>
 <p>I’d like nothing more but to be one with <em>all</em> of my fellow programmers. To play with them in this large sandbox we call Universe and help bring more light into this darkness. It’s just difficult, some days.</p>
 <p>Some days I feel like praying to Mother to come down and wash it all away, as the song goes.</p>
 <figure>
 <img src="img/cartoon-beard.png" alt="I mean, seriously.. ripping off graphics and music from a widely popular Nintendo game?!" /><figcaption>I mean, seriously.. ripping off graphics and music from a widely popular Nintendo game?!</figcaption>
 </figure>
-<p>I know that, by this time, this might be just a pointless exercise, but here’s one last attempt to get this across: if you have some time to spare (I think you do, given that you’re reading this), please <a href="http://www.sloperama.com/advice/faq61.htm">read this important information</a>. It will do you good.</p>
+<p>I know that, by this time, this might be just a pointless exercise, but here’s one more attempt to get this across: if you have some time to spare (I think you do, given that you’re reading this), please <a href="http://www.sloperama.com/advice/faq61.htm">read this important information</a>. It will do you good.</p>
+<div class="hrule1"></div>
+
 <p>And so, we reach the end of this story, my friends. Soon, this URL will contain nothing but emptiness, and all of this will be nothing but a dim memory in the collective consciousness.</p>
 <p>I’ll confide a little secret to you: my main consolation at times like this, is in the words popularized by of our good friend Gautama..</p>
 <figure>
